# collegeSystem

./: .env.example  .gitignore  README.md  pyproject.toml
collegeSystem/: asgi.py  settings.py  urls.py  wsgi.py
collegeSystem/main_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
collegeSystem/main_app/migrations/: 0001_initial.py  0002_alter_course_department_and_more.py  0003_alter_course_department_alter_course_teacher_and_more.py  0004_course_credits.py  0005_remove_grade_teacher_remove_student_specialty_and_more.py  0007_enrollment_grade_delete_grade.py  (+6 more)
collegeSystem/users/: admin.py  apps.py  models.py  signal.py  views.py
static/css/: tables.css
static/js/: app.js  data.js
templates/: base.html  index.html
templates/accounts/: login.html  register.html
templates/courses/: add-course.html  course-details.html  course-manage.html  courses.html  delete-course.html  edit-course.html
templates/departments/: add-department.html  delete-department.html  department-details.html  departments.html  edit-department.html
templates/faculties/: add-faculty.html  delete-faculty.html  edit-faculty.html  faculties.html  faculty-details.html
templates/programs/: add-program.html  delete-program.html  edit-program.html  program-details.html  programs.html  student-program.html
templates/statistics/: statistics.html
templates/students/: add-student.html  delete-student.html  edit-student.html  student-details.html  students.html
templates/teachers/: add-teacher.html  delete-teacher.html  edit-teacher.html  teacher-details.html  teachers.html
(+5 files in other folders)
