[project]
name = "collegesystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaneww11",email = "yaneyanev2807@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
